modification de l'emplacement de la db, ajout d'un README, correction au niveau du css

--- a/public/assets/css/origin.css
+++ b/public/assets/css/origin.css
@@ -30,7 +30,7 @@ height: 40px;
     border-color: rgb(235, 109, 6);
 }
 #Exo2:focus{
-    box-shadow:0 0 0 .2rem rgb(235, 109, 6))}
+    box-shadow:0 0 0 .2rem rgb(235, 109, 6)}
 
 
 .container{
